# dubbingx

./: .gitignore  CLAUDE.md  README.md  demo.py  main.py  pyproject.toml  test_process_batch_removal.py
core/: audio_align_processor.py  dubbing_pipeline.py  media_processor.py  subtitle_preprocessor.py  tts_processor.py
core/asr/: __init__.py  config.py  simple_asr.py
core/cache/: __init__.py  cache_types.py  step_cache_manager.py  task_cache.py  unified_cache_manager.py
core/gui/: __init__.py  handlers.py  main_window.py  matchers.py  pipeline.py  workers.py
core/gui/status/: async_signal_emitter.py  status_event_manager.py
core/pipeline/: __init__.py  resource_manager.py  step_processor.py  task.py  task_listener.py  task_queue.py  task_scheduler.py
core/pipeline/processors/: __init__.py  align_audio_processor.py  audio_align_processor.py  generate_aligned_srt_processor.py  generate_reference_audio_processor.py  generate_tts_processor.py  media_processor.py  merge_audio_video_processor.py  preprocess_subtitle_processor.py  process_video_speed_processor.py  separate_media_processor.py  subtitle_preprocessor.py
core/status/: __init__.py  async_signal_emitter.py  async_status_manager.py  status_event_manager.py
core/subtitle/: subtitle_entry.py  subtitle_processor.py  text_processor.py
core/tts/: __init__.py  cosyvoice_tts.py  engine_type.py  index_tts.py
core/util/: __init__.py  filename_utils.py
