[project]
name = "dubbingx"
version = "0.1.0"
description = "智能视频配音系统，支持GPU加速和声音克隆"
authors = [{ name = "DubbingX Team", email = "team@dubbingx.com" }]
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "MIT" }

dependencies = [
    # PyTorch生态系统
    "torch",
    "torchaudio",
    "torchvision",
    # AI模型
    "demucs",
    # 音频处理
    "librosa",
    "soundfile",
    "numpy",
    # 视频处理
    "ffmpeg-python",
    # TTS集成
    "gradio-client",
    # GUI框架
    "PySide6",
    # 文本处理
    "unicodedata2",
    # HTTP客户端
    "httpx",
    "diffq>=0.2.4",
    "psutil>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 指定项目包目录
[tool.hatch.build.targets.wheel]
packages = ["core"]

# PyTorch CUDA 12.8索引配置
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# 指定PyTorch包使用CUDA索引，支持Windows和Linux
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }
]

# 开发依赖
[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0", 
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0"
]
